# project-sat

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmarks/: data.in  output.out
lib/: BruteForceSolver.cpp  BruteForceSolver.h  DPLLSolver.cpp  DPLLSolver.h
src/: main.cpp  runner.sh
